add support to output multiple bundle js

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>React Starter Kit</title>
-
-        </script>
+        <script src="../dist/print.bundle.js"></script>
     </head>
     <body>
-        <script src="../dist/bundle.js"></script>
+        <script src="../dist/app.bundle.js"></script>
     </body>
 </html>
